--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ repositories {
 
 android {
     compileSdkVersion "Google Inc.:Glass Development Kit Preview:19"
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "lightwave.glass.njackson.com.glasslightwave"
+        applicationId "com.njackson.glass.lightwave"
         minSdkVersion 19
         targetSdkVersion 19
         versionCode 1
