--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.gson:gson:2.2.4'
     androidTestCompile 'junit:junit:3.8'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.1+'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1+'
